--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,9 @@ title: 개발하는 성장몬 # the main title
 tagline: 성장몬 육성 일기 # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  성장몬 육성 일기 | 오늘도 공부하는 무럭무럭 ✨`성장몬`✨ 입니다. 
+# A minimal, responsive and feature-rich Jekyll theme for technical writing.
+
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: "https://xoxojhk.github.io"
